# Curator

./: .gitignore  Cargo.toml
src/: main.rs
src/generator/: mod.rs
tests/: curator_tests.rs
